# ztnet-box

./: .gitignore  AUDIT.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  config.yml.example
.cargo/: config.toml
.github/: COMMIT_CONVENTION.md
.github/workflows/: ci.yml  close-stale-prs.yml  manual-testing.yml  packages.yml  pr.yml  release.yml  screenshots.yml  version.yml
docs/: configuration.md  development.md  exit-node.md  installation.md  l2-bridge.md
docs/features/: exit-node.md  l2-bridge.md  tcp-relay.md
docs/screenshots/: README.md
pkg/debian/: postinst  prerm
pkg/homebrew/: ztnet-box.rb
pkg/lib/systemd/system/: ztnet-box.service
plan/: PART-1-infrastructure.md  PART-2-backend.md  PART-3-frontend.md  PART-4-integration.md  PLAN.md  README.md  updates.md
src/: deps.rs  lib.rs  main.rs  runtime_state.rs
src/bridge/: deps.rs  mod.rs  platform.rs  rules.rs
src/config/: env.rs  mod.rs  schema.rs
src/exitnode/: deps.rs  interfaces.rs  mod.rs  ndp.rs  platform.rs  rules.rs
src/metrics/: cache.rs  collector.rs  mod.rs  parser.rs
src/physnet/: conflicts.rs  deps.rs  mod.rs  rules.rs
src/relay/: deploy.rs  mod.rs  ssh.rs
src/server/: error.rs  log_collector.rs  middleware.rs  mod.rs  router.rs  state.rs  validate.rs
src/server/handlers/: bridge.rs  central.rs  config.rs  exitnode.rs  local.rs  local_config.rs  logs.rs  metrics.rs  mod.rs  ndp.rs  physnet.rs  relay.rs  system.rs  tokens.rs
src/zerotier/: detection.rs  mod.rs
src/zerotier/central/: client.rs  mod.rs  token_store.rs  types.rs
src/zerotier/local/: client.rs  types.rs
src/zerotier/local_config/: mod.rs
tests/: api_central.rs  api_health.rs  api_local.rs
www/src/css/: components.css  layout.css  pages.css  reset.css  variables.css
www/src/html/: shell.html
www/src/js/: api.js  log-panel.js  router.js  state.js  z-init.js
www/src/js/components/: log-panel.js  modal.js  qrcode.js  table.js  toast.js
www/src/js/pages/: bridge.js  controllers-config.js  controllers-members.js  controllers-networks.js  dashboard.js  exitnode.js  network-detail.js  networks.js  peers.js  physnet.js  relay.js  settings-global.js  settings-roots.js  settings-tokens.js  settings-ztnode.js
