[package]
name          = "ztnet-box"
version = "0.6.1"
edition       = "2021"
rust-version  = "1.75"
description   = "Local web UI for ZeroTier management"
license       = "MIT"
repository    = "https://github.com/CleoWixom/ztnet-box"

[[bin]]
name = "ztnet-box"
path = "src/main.rs"

[lib]
name = "ztnet_box"
path = "src/lib.rs"

[dependencies]
axum               = { version = "0.7", features = ["macros"] }
tokio              = { version = "1",   features = ["full"] }
serde              = { version = "1",   features = ["derive"] }
serde_yaml         = "0.9"
serde_json         = "1"
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http         = { version = "0.5", features = ["cors", "compression-gzip", "set-header"] }
which              = "6"
uuid               = { version = "1", features = ["v4"] }
chrono             = { version = "0.4", features = ["serde"] }
nix                = { version = "0.28", features = ["user", "process", "net"] }
anyhow             = "1"

[build-dependencies]
# только std, нет внешних build-deps

[dev-dependencies]
tower          = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
